--- a/css/banner-detail.css
+++ b/css/banner-detail.css
@@ -19,7 +19,7 @@ img {
 }
 
 #wrap {
-    width: 80vw; height: 100vh;
+    width: 80vw;
     max-width: 1280px;
     margin: 100px auto 0;
 }
@@ -38,6 +38,19 @@ header h2 {
     line-height: 50px;
     font-weight: normal;
 }
+h3.section-title {
+    font-weight: normal;
+    font-size: 16px;
+    margin-bottom: 24px;
+    width: 100%;
+    padding: 2px 20px;
+    text-transform: uppercase;
+    text-align: center;
+    line-height: 20px;
+    background: #000;
+    color: #fff;
+    border-radius: 16px;
+}
 .sub-title {
     font-weight: normal;
     font-size: 16px;
@@ -47,6 +60,9 @@ header h2 {
     border-bottom: 4px solid #000;
     text-transform: uppercase;
     text-align: center;
+}
+section.preview-area {
+    margin-bottom: 120px;
 }
 .preview-title {
     width: fit-content;
@@ -60,11 +76,44 @@ header h2 {
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 5fr 2fr 4fr;
 }
+section.section__cont img {
+    cursor: pointer;
+}
 .img-width {
     width: 100%;
 }
 .img-height {
     height: 100%;
+}
+img.img_click {
+    cursor: pointer;
+}
+.on_click_width {
+    display: block;
+    width: 100vw !important;
+    position: fixed;
+    top: 50%;
+    transform: translateY(-50%);
+    left: 0;
+    z-index: 15;
+}
+.on_click_height {
+    display: block;
+    width: auto !important;
+    height: 100vh !important;
+    position: fixed;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 15;
+}
+.on_click_bg {
+    display: block;
+    width: 100vw; height: 100%;
+    background: rgba(0,0,0,0.8);
+    position: fixed;
+    top: 0; left: 0;
+    z-index: 10;
 }
 .main_banner_area {
     grid-column: 1/2;
@@ -97,9 +146,6 @@ header h2 {
 section > div {
     margin-bottom: 50px;
 }
-.section__cont img {
-    cursor: zoom-in;
-}
 .default-banner {
     display: flex;
     width: 100%; height: calc((80vw - 32px)/3);
@@ -116,4 +162,18 @@ section > div {
 
 .img-width {
     width: 100%;
+}
+
+.footer {
+    width: 100vw; height: 150px;
+    position: absolute;
+    left: 0;
+    background: #000;
+    text-align: center;
+    
+}
+.footer > p {
+    font-size: 12px;
+    color: #fff;
+    line-height: 149px;
 }
