--- a/css/prologue.css
+++ b/css/prologue.css
@@ -32,14 +32,16 @@ a {
 li {
     margin-top: 16px;
 }
+ul.flex-box {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+}
 li.half-list {
-    width: 48%;
-    display: inline-block;
-    margin-right: 2%;
+    width: 49%;
+    display: block;
 }
-li.half-list:last-child {
-    margin: 0;
-}
+
 .btn {
     width: 100%;
     height: 50px;
