--- a/css/prologue.css
+++ b/css/prologue.css
@@ -1,5 +1,16 @@
 @import url(//fonts.googleapis.com/earlyaccess/notosanskr.css);
 
+@keyframes fadeOut {
+    from {
+        opacity: 1;
+        visibility: visible;
+    }
+    to {
+        opacity: 0;
+        visibility: hidden;
+    }
+}
+
 * {
     margin: 0; padding: 0;
     list-style: none;
@@ -57,6 +68,24 @@ li.half-list {
 .btn:hover {
     background: #fff;
     font-weight: 550;
+}
+
+.notice {
+    width: 100%;
+    height: 100%;
+    background: #000;
+    position: fixed;
+    top: 0; left: 0;
+    animation: fadeOut 2s 2s;
+    animation-fill-mode: forwards;
+}
+
+.notice p {
+    color: #fff;
+    text-align: center;
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
 }
 
 
