--- a/css/style.css
+++ b/css/style.css
@@ -347,13 +347,14 @@ img.logo {
 
 
 /* mobile */
+/*
 
 @media screen and (max-width:768px) {
     #wrap {
         width: 100vw;
         padding: 0 20px;
     }
-    /* Menu bar */
+    // Menu bar
     header {
         position: fixed;
         width: 50px; height: 100%;
@@ -489,7 +490,7 @@ img.logo {
     }
 
 
-    /* logo */
+    // logo
     .section {
         width: 100%; height: 100%;
         padding-right: 30px;
@@ -502,7 +503,7 @@ img.logo {
         transform: translate(-50%, -50%);
     }
 
-    /* profile */
+    //profile
     .section2 {
         width: 100%; height: 100%;
     }
@@ -550,7 +551,7 @@ img.logo {
         top: 85px;
     }
 
-    /* others tab */
+    //others tab
 
     .othersCtn > h2 {
         font-size: 16px;
@@ -604,3 +605,4 @@ img.logo {
 
 }
 
+*/
